--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>CSS Pseudo Classes </title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
     <div class="container">
-      <h1>Learn Pseudo Class from the Background Color</h1>
+      <h1>Learn CSS Pseudo Classes from the Background Color</h1>
       <a class="default" href="#">Whitesmoke is a default state.</a>
       <a href="#">Pink is a hover state!</a>
       <a href="#">Yellow is a active state!</a>
